JumpScript/tests/baselines/reference/parserUnaryExpression3.errors.txt
tests/cases/conformance/parser/ecmascript5/Expressions/parserUnaryExpression3.jump(1,3): error TS2356: An arithmetic operand must be of type 'any', 'number' or an enum type.


==== tests/cases/conformance/parser/ecmascript5/Expressions/parserUnaryExpression3.jump (1 errors) ====
    ++[0];
      ~~~
!!! error TS2356: An arithmetic operand must be of type 'any', 'number' or an enum type.